--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     "php": ">=5.3.2"
   },
   "autoload": {
-    "psr-4": { "Roots\\Branding\\": "src/" }
+    "psr-4": { "MilBar\\Branding\\": "src/" }
   }
 }
