--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mb_wp-plugin/milbar",
+  "name": "mb_wp-plugin/milbar-branding",
   "description": "",
   "homepage": "https://milbar.eu",
   "license": "MIT",
